# cmake-template

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  generate.bat
